# actor-gpi-v2

./: .gitignore  CMakeLists.txt
jobs/: pond_128.56011.i22r04c05s05.out  pond_128.56014.i22r04c05s05.out  pond_128.56062.i22r02c06s05.out  pond_128.56118.i22r04c01s12.out  pond_128.56172.i22r04c04s11.out  pond_proper.55984.i22r01c02s05.out  pond_proper.55986.i22r01c02s05.out  pond_proper.55987.i22r01c02s05.out  pond_proper.55988.i22r01c02s05.out  pond_sample.55843.i22r03c04s12.out  pond_sample.sh  pond_sample2.sh  pond_smaller_sample.sh
jobscript-gen/: gen_strong_tests.py  gen_weak_tests.py  individual_script.py
outputs/: GPIstrong1.168454.i23r01c01s11.out  GPIstrong1.168997.i23r01c05s06.out  GPIstrong1.174551.i23r03c03s09.out  GPIstrong2.168451.i23r02c03s08.out  GPIstrong2.168974.i23r02c03s01.out  GPIstrong2.168998.i23r02c03s06.out  GPIstrong32.60123.i22r01c02s04.out  GPIstrong32.60157.i22r01c04s05.out  GPIstrong32.60171.i22r01c04s05.out  GPIstrong32.60305.i22r01c04s01.out  GPIstrong32.60306.i22r01c04s01.out  GPIstrong32.60307.i22r01c04s01.out  GPIstrong32.60453.i22r01c02s07.out  GPIstrong32.60454.i22r01c02s07.out  GPIstrong32.60455.i22r01c02s07.out  GPIstrong32.60458.i22r01c02s07.out  GPIstrong32.60459.i22r01c02s07.out  GPIstrong32.60539.i22r01c03s11.out  GPIstrong4.58205.i22r03c01s10.out  GPIstrong4.58211.i22r05c03s06.out  GPIstrong4.58297.i22r01c01s09.out  GPIstrong4.58304.i22r01c03s12.out  GPIstrong4.58306.i22r02c03s04.out  GPIstrong4.58322.i22r01c03s12.out  GPIstrong8.60111.i22r03c03s12.out  GPIstrong8.60113.i22r03c03s12.out  GPIstrong8.60117.i22r06c01s02.out  GPIstrong8.60118.i22r06c01s02.out  GPIstrong8.60119.i22r02c01s02.out  GPIstrong8.60122.i22r02c01s02.out  GPIstrong8.60128.i22r01c03s11.out  GPIstrong8.60135.i22r01c03s11.out  GPIweak1.168511.i23r03c02s03.out  GPIweak1.168516.i23r01c02s08.out  GPIweak1.169004.i23r01c02s10.out  GPIweak1.169037.i23r01c05s03.out  GPIweak2.168512.i23r01c02s08.out  GPIweak2.169005.i23r02c05s07.out  GPIweak4.58323.i22r02c02s03.out  GPIweak8.58328.i22r01c02s05.out  (+16 more)
s2outputs/: GPIstrong1.177160.i23r02c03s12.out  GPIstrong1.178119.i23r02c05s10.out  GPIstrong1.178124.i23r01c05s03.out  GPIstrong1.178140.i23r01c03s08.out  GPIstrong1.178144.i23r01c06s06.out  GPIstrong16.60588.i22r02c04s02.out  GPIstrong16.60768.i22r01c05s08.out  GPIstrong16.60770.i22r01c05s08.out  GPIstrong16.60771.i22r01c05s08.out  GPIstrong16.60793.i22r02c05s09.out  GPIstrong2.177161.i23r02c01s01.out  GPIstrong2.178120.i23r01c05s04.out  GPIstrong2.178125.i23r01c02s11.out  GPIstrong2.178137.i23r03c03s03.out  GPIstrong2.178141.i23r01c06s02.out  GPIstrong32.60589.i22r02c06s06.out  GPIstrong32.60862.i22r02c01s05.out  GPIstrong32.60863.i22r02c01s05.out  GPIstrong32amp.60717.i22r02c02s04.out  GPIstrong32amp2.61130.i22r01c01s07.out  GPIstrong32amp2.61226.i22r01c06s10.out  GPIstrong32amp2.61386.i22r01c02s01.out  GPIstrong4.60626.i22r05c01s04.out  GPIstrong4.60739.i22r02c05s09.out  GPIstrong4.60740.i22r01c05s08.out  GPIstrong4.60742.i22r02c05s09.out  GPIstrong4.60749.i22r01c05s08.out  GPIstrong8.60587.i22r01c04s11.out  GPIstrong8.60751.i22r01c05s08.out  GPIstrong8.60752.i22r01c05s08.out  GPIstrong8.60753.i22r02c06s10.out  GPIstrong8.60767.i22r01c05s08.out  GPIweak1.177383.i23r03c04s04.out  GPIweak1.178121.i23r03c05s05.out  GPIweak1.178126.i23r01c04s10.out  GPIweak1.178138.i23r01c03s08.out  GPIweak1.178142.i23r01c06s06.out  GPIweak16.60695.i22r01c04s01.out  GPIweak16.60772.i22r01c05s08.out  GPIweak16.60773.i22r01c05s08.out  (+75 more)
s3outputs/: GPIstrong1.180211.i23r02c03s06.out  GPIstrong1.180212.i23r03c06s12.out  GPIstrong1.180213.i23r04c01s09.out  (+17 more)
(+268 files in other folders)
